tests/bad/undefined_property.out
Error: tests/bad/undefined_property.lens, block starting line 8:
<eval>:8 TypeError: Cannot read property "blue" from undefined
